--- a/src/pages/authentication/Login/Login.css
+++ b/src/pages/authentication/Login/Login.css
@@ -1,8 +1,21 @@
-.register-form {
-  border: 2px solid green;
+.login-container {
+  background-color: rgb(28, 6, 58);
+  height: calc(100vh - 96px);
+  display: flex;
+  flex-direction: column;
+}
+.login-form {
+  width: 650px;
+  height: 450px;
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+  margin: auto;
+  justify-content: center;
 
-  background-color: rgba(5, 44, 55, 0.386);
-  width: 40vw;
+  color: black;
+  background-color: white;
+  box-shadow: 10px 10px 20px rgba(0, 0, 0, 0.5);
 }
 
 input[type="password"],
@@ -10,40 +23,29 @@ input[type="email"],
 input[type="text"],
 input[type="tel"],
 input[type="number"] {
-  width: 70%;
+  width: 440px;
   padding: 7px;
-  margin-top: 12px;
+  margin: 15px 0px;
   display: block;
   margin-left: auto;
   margin-right: auto;
-  margin-bottom: 12px;
+
   border: 2px solid #ccc;
   box-sizing: border-box;
+  border-radius: 7px;
+  line-height: 40px;
 }
 
 .button-style {
   display: block;
-  background-color: rgb(156, 90, 147);
+  background-color: rgb(28, 6, 58);
   border-radius: 8px;
   border: 2px solid white;
   width: 25%;
   margin-left: auto;
   margin-right: auto;
-  margin-bottom: 25px;
+
   font-weight: 800;
   color: white;
   line-height: 40px;
-}
-.reg-img-set {
-  grid-gap: 0;
-}
-@media only screen and (max-width: 600px) {
-  .button-style {
-    font-weight: 600;
-    font-size: small;
-    width: 45%;
-  }
-  .register-form {
-    width: 94.1vw;
-  }
 }
